Use network interface name wigig0 instead of wlan1
Required when insmod of wil6210 is done once upon init.rc

Change-Id: I35fd7d52b769ba85ad5f609446008a804904b9b4

--- a/fstman.ini
+++ b/fstman.ini
@@ -3,7 +3,7 @@ ctrl_iface=/data/misc/wifi/hostapd/global
 groups=bond0
 
 [bond0]
-interfaces=wlan0,wlan1
+interfaces=wlan0,wigig0
 mux_type=bonding
 mux_ifname=bond0
 mux_managed=1
@@ -16,7 +16,7 @@ rate_upgrade_acl_file=/data/misc/wifi/fst_rate_upgrade.accept
 priority=100
 default_llt=3600
 
-[wlan1]
+[wigig0]
 priority=110
 wpa_group=GCMP
 wpa_pairwise=GCMP
